@@ -1,5 +1,17 @@
 .objc_class_name_WebScriptObject
 .objc_class_name_WebScriptObjectPrivate
+.objc_class_name_WebUndefined
+_JNI_GetCreatedJavaVMs
+_KJS_JSCreateNativeJSObject
+_KJS_JSObject_JSFinalize
+_KJS_JSObject_JSObjectCall
+_KJS_JSObject_JSObjectEval
+_KJS_JSObject_JSObjectGetMember
+_KJS_JSObject_JSObjectGetSlot
+_KJS_JSObject_JSObjectRemoveMember
+_KJS_JSObject_JSObjectSetMember
+_KJS_JSObject_JSObjectSetSlot
+_KJS_JSObject_JSObjectToString
 __NPN_CreateObject
 __NPN_CreateScriptObject
 __NPN_Evaluate
@@ -7,7 +19,10 @@ __NPN_GetIntIdentifier
 __NPN_GetProperty
 __NPN_GetStringIdentifier
 __NPN_GetStringIdentifiers
+__NPN_HasMethod
+__NPN_HasProperty
 __NPN_IdentifierIsString
+__NPN_IntFromIdentifier
 __NPN_Invoke
 __NPN_InvokeDefault
 __NPN_ReleaseObject
@@ -17,6 +32,30 @@ __NPN_RetainObject
 __NPN_SetException
 __NPN_SetProperty
 __NPN_UTF8FromIdentifier
+__Z17NPN_VariantIsBoolPK10_NPVariant
+__Z17NPN_VariantIsNullPK10_NPVariant
+__Z17NPN_VariantIsVoidPK10_NPVariant
+__Z17NPN_VariantToBoolPK10_NPVariantPh
+__Z18NPN_VariantIsInt32PK10_NPVariant
+__Z18NPN_VariantToInt32PK10_NPVariantPi
+__Z19NPN_VariantIsDoublePK10_NPVariant
+__Z19NPN_VariantIsObjectPK10_NPVariant
+__Z19NPN_VariantIsStringPK10_NPVariant
+__Z19NPN_VariantToDoublePK10_NPVariantPd
+__Z19NPN_VariantToObjectPK10_NPVariantPP8NPObject
+__Z19NPN_VariantToStringPK10_NPVariant
+__Z22NPN_VariantIsUndefinedPK10_NPVariant
+__Z25_NPN_SetExceptionWithUTF8P8NPObjectPKci
+__Z27NPN_InitializeVariantAsNullP10_NPVariant
+__Z27NPN_InitializeVariantAsVoidP10_NPVariant
+__Z29NPN_InitializeVariantWithBoolP10_NPVarianth
+__Z30NPN_InitializeVariantWithInt32P10_NPVarianti
+__Z31NPN_InitializeVariantWithDoubleP10_NPVariantd
+__Z31NPN_InitializeVariantWithObjectP10_NPVariantP8NPObject
+__Z31NPN_InitializeVariantWithStringP10_NPVariantPK9_NPString
+__Z32NPN_InitializeVariantAsUndefinedP10_NPVariant
+__Z32NPN_InitializeVariantWithVariantP10_NPVariantPKS_
+__Z35NPN_InitializeVariantWithStringCopyP10_NPVariantPK9_NPString
 __ZN3KJS10Identifier3addEPKc
 __ZN3KJS10Identifier3addEPNS_7UString3RepE
 __ZN3KJS10Identifier5equalEPNS_7UString3RepEPKc
